<resources>
    <string name="app_name">ARCourse1</string>
    <string name="definisi">Secara umum, limas dapat diartikan sebagai salah satu bangun ruang sisi datar yang dibatasi oleh sebuah sisi alas yang berupa segibanyak dan sisi-sisi tegak yang berbentuk segitiga. Salah satu titik sudut dari masing-masing segitiga tersebut bertemu pada satu titik yaitu titik puncak limas.
    </string>
    <string name="definisi2">Pemberian nama pada limas berdasarkan pada bentuk alasnya. Suatu limas yang alasnya berbentuk segitiga disebut dengan limas segitiga, limas dengan sisi alas berbentuk segi empat diberi nama limas segi empat, dan begitu pula dengan sisi alas yang berbentuk segibanyak lainnya.</string>
    <string name="sifat">Berikut merupakan sifat-sifat yang dimiliki bangun ruang limas segi-n.\n
            •	Banyak sisi\n
                Banyak sisi pada limas segi-n adalah n + 1 buah, sebuah sisi alas dan n buah sisi tegak berbentuk segitiga.\n
            •	Banyak titik sudut\n
                Titik sudut pada limas segi-n ada sebanyak n + 1. Sebuah titik sudut merupakan titik puncak limas (pertemuan titik-titik sudut dari sisi tegak) dan  n buah sudut merupakan sudut yang terbentuk pertemuan titik sudut segi-n dengan sisi tegak.\n
            •	Banyak rusuk\n
                Banyak rusuk pada bangun limas segi-n adalah 2n buah.\n
                Setelah mengetahui mengenai unsur dan sifat bangun limas, berikut akan dibahas mengenai penerapan bentuk limas dalam kehidupan sehari
    </string>
    <string name="kehidupan">
        Bentuk-bentuk menyerupai limas sering dijumpai dalam kehidupan sehari-hari. Salah satu contohnya yaitu piramida. Bentuk piramida menyerupai bangun limas.
        Piramida menyerupai bangun limas segiempat. Piramida dan bangun limas keduanya memiliki alas dan sisi tegak yang bertemu pada satu titik yaitu titik puncak limas/puncak piramida.
        Contoh lainnya yaitu bentuk atap rumah. Terdapat beberapa rumah yang atapnya berbentuk limas segiempat.
    </string>
    <string name="jaring">
        Bentuk jaring-jaring bangun limas dapat diketahui dari bentuk alas dan sisi-sisi tegak limas tersebut.Perhatikan beberapa bentuk jaring-jaring limas berikut. \n
        Pada gambar berikut terdapat jaring-jaring limas segitiga dan limas segitujuh.
    </string>
    <string name="jaring1">
        Bentuk jaring-jaring yang lainnya yaitu jaring-jaring limas segiempat ini. Perhatikan gambar limas segiempat dan jaring-jaringnya di bawah ini.
    </string>
    <string name="jaring2">
        Pada jaring-jaring limas segiempat tersebut terdapat lima bangun datar yaitu sebuah segiempat dan empat buah segitiga yang kongruen. Pada bangun limas segiempat T.ABCD mempunyai jaring-jaring yang terdiri dari sebuah alas berbentuk segiempat yaitu segiempat ABCD dan empat buah segitiga yang kongruan yaitu segitiga TAB, TBC, TCD, serta segitiga TDA.
        Bentuk jaring-jaring limas tersebut dapat digunakan untuk menentukan luas permukaan limas.
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="formatted_time">%d</string>
    <string name="contoh_awal_kubus">Pernahkan kamu melihat gambar-gambar di atas?\n\nSebelum lanjut, dapatkah kamu menyebutkan gambar diatas merupakan contoh bangun ruang apa?\n\nYaa rubik, kado dan dadu merupakan contoh dari kubus. Untuk lebih jelasnya, perhatikan gambar berikut\n
</string>
    <string name="definisi_kubus">Kubus  merupakan bangun ruang yang dibatasi oleh enam daerah persegi yang kongruen (sama besar). Pada bangun ruang, sisi merupakan bidang yang membatasi bangun. Sisi-sisi pada kubus memiliki bentuk yang sama berupa persegi. Jadi sekarang sudah paham mengenai sisi kubus kan? Jika masih bingung mengenai kubus, perhatikan uraian berikut</string>
    <string name="elemen_kubus">Nama bangunnya adalah kubus ABCD.EFGH\n
•	Rusuknya adalah AB, BC, CD, AD, EF, FG, GH, EH\n
•	Sisinya adalah ABCD, EFGH, ABFE, DCGH, BCGF, ADHE\n
•	Titik sudutnya adalah A, B, C, D, E, F, G, H\n
•	Diagonal sisinya adalah AF, BE, BG, CF, CH, DG, AH, DE, AC, BD, EG, FH\n
•	Diagonal ruangnya adalah HB, DF, AG, CE\n
•	Bidang diagonalnya adalah BCHE, AFGD, ABGH, CDEF, DBFH, ACGE\n
</string>
    <string name="sisi_bidang_kubus">Sisi kubus adalah bidang yang membatasi kubus. Gambar di bawah menunjukkan bahwa kubus memiliki 6 buah sisi yang semuanya berbentuk persegi, yaitu ABCD (sisi bawah), EFGH (sisi atas), ABFE (sisi depan), CDHG (sisi belakang), BCGF (sisi samping kanan), dan ADHE (sisi samping kiri). Sisi / Bidang ABCD = EFGH = ABFE = CDHG = ADHE = BCGF</string>
    <string name="rusuk_kubus">Rusuk kubus adalah garis potong antara dua sisi bidang kubus dan terlihat seperti kerangka yang menyusun kubus. Kubus ABCD.EFGH memiliki 12 buah rusuk, yaitu AB, BC, CD, DA, EF, FG, GH, HE, AE, BF, CG, dan DH.</string>
    <string name="titik_sudut_kubus">Titik sudut kubus adalah titik potong antara dua rusuk. Gambar di bawah menunjukkan bahwa kubus ABCD. EFGH memiliki 8 buah titik sudut, yaitu titik A, B, C, D, E, F, G, dan H.</string>
    <string name="diagonal_bidang_kubus">Sebuah garis dikatakan diagonal bidang jika garis tersebut menghubungkan dua titik yang berseberangan terletak pada satu bidang. Jumlah diagonal bidang pada kubus adalah 12 buah. Panjang diagonal sisi/ bidang AC = BD = EG = HF = AF = BE = CH = DG = AH = DE = BG = CF </string>
    <string name="diagonal_ruang_kubus">Pada kubus tersebut, terdapat ruas garis HB yang menghubungkan dua titik sudut yang saling berhadapan dalam satu ruang. Ruas garis tersebut disebut diagonal ruang. Panjang diagonal ruang AG = BH = CE = DF
Terdapat 4 buah diagonal ruang pada sebuah kubus dengan panjang sama.
</string>
    <string name="bidang_diagonal_kubus">Bidang- bidang diagonal adalah bidang- bidang pada bangun ruang yang menghubungkan ruas garis- garis yang berseberangan, sehingga membagi bangun ruang itu menjadi dua bagian yang sama.
Terdapat 6 buah bidang diagonal, yaitu : ACGE, BDHF, ABGH, CDEF, ADGF, BCHE
Bidang diagonal ACGE = BDHF = ABGH = CDEF = ADGF = BCHE
</string>
    <string name="sifat1_kubus">Semua sisi kubus berbentuk persegi.
Jika diperhatikan, sisi ABCD, EFGH, ABFE dan seterusnya memiliki bentuk persegi dan memiliki luas yang sama.
</string>
    <string name="sifat2_kubus">Semua rusuk kubus berukuran sama panjang.
Rusuk-rusuk kubus AB, BC, CD, dan seterusnya memiliki ukuran yang sama panjang.
</string>
    <string name="sifat3_kubus">Setiap diagonal bidang pada kubus memiliki ukuran yang sama panjang.
Perhatikan ruas garis BG dan CF pada Gambar di atas. Kedua garis tersebut merupakan diagonal bidang kubus ABCD.EFGH yang memiliki ukuran sama panjang.
</string>
    <string name="sifat4_kubus">Setiap diagonal ruang pada kubus memiliki ukuran sama panjang.
Dari kubus ABCD.EFGH pada Gambar di atas, terdapat dua diagonal ruang, yaitu HB dan DF yang keduanya berukuran sama panjang.
</string>
    <string name="sifat5_kubus">Setiap bidang diagonal pada kubus memiliki bentuk persegipanjang.
Perhatikan bidang diagonal ACGE pada Gambar di atas. Terlihat dengan jelas bahwa bidang diagonal tersebut memiliki bentuk persegi panjang.

</string>
    <string name="contoh_awal_balok">    Pernahkan kamu melihat gambar-gambar di atas?\n\nSebelum lanjut, dapatkah kamu menyebutkan gambar diatas merupakan contoh bangun ruang apa?\n\nYaa kotak tisu, kardus dan aquarium merupakan contoh dari balok. Untuk lebih jelasnya, perhatikan gambar berikut
</string>
    <string name="definisi_balok">Balok merupakan contoh bangun ruang. Balok memiliki enam sisi. Pada bangun ruang, sisi merupakan bidang yang membatasi bangun. Sisi-sisi pada balok berupa bidang yang berbentuk persegipanjang atau sebagian berupa persegi. Sisi persegipanjang di atas antara lain adalah sisi ABFE. Dapatkah kamu menyebutkan nama sisi-sisi lainnya? Persegipanjang memiliki empat sisi yang berupa garis. Balok memiliki enam sisi berupa bidang. Jadi, sekarang sudah jelas perbedaan sisi pada bangun datar dan sisi pada bangun ruang.</string>
    <string name="elemen_balok">Nama bangunnya adalah Balok KLMN.OPQR\n
•	Rusuknya adalah KL, LM, MN, NK, OP, PQ, QR, RO, PL, QM, RN, OK\n
•	Sisinya adalah KLMN, OPQR, KLPO, NMQR, LMQP, KNRO\n
•	Titik sudutnya adalah K, L, M, N, O, P, Q, R\n
•	Diagonal sisinya adalah LQ, MP, LO, PK, KR, NO, NQ, RM, KM, LN, OQ, PR\n
•	Diagonal ruangnya adalah LR, PN, MO, KQ\n
•	Bidang diagonalnya adalah LMRO, KPQN, OPMN, KLQR, KMQO, NLPR\n

</string>
    <string name="sisi_bidang_balok">Bidang/sisi pada sebuah balok adalah bagun datar yang memisahkan antara bagian dalam dan bagian luar. Banyaknya sisi yang dimilikinya sebanyak 6 sisi.\n
•	Sisi alas : ABCD, Sisi atas : EFGH\n
•	Sisi kanan : BCGF, Sisi kiri : ADHF\n
•	Sisi depan : ABFE, Sisi belakang : CDHG\n
</string>
    <string name="rusuk_balok">Rusuk pada sebuah balok adalah garis potong antara sisi-sisi balok.Penulisan/penamannya rusuk menggunakan notasi dua huruf kapital. Pada balok ABCD.EFGH terdapat 12 rusuk yang sama panjang yaitu :\n
•	Rusuk Alas : AB, BC, CD, AD\n
•	Rusuk Tegak : AE, BF, CG, DH\n
•	Rusuk Atas :  EF, FG, GH, EH\n
</string>
    <string name="titik_sudut_balok">Titik sudut pada sebuah balok adalah titik temu atau titik potong ketiga rusuk (titik pojok balok).
Pada balok ABCD.EFGH terdapat 8 buah titik sudut yaitu :
</string>
    <string name="diagonal_bidang_balok">Diagonal bidang/sisi pada sebuah balok adalah ruas garis yang terbentuk oleh sudut yang berhadapan pada satu bidang. Ada 12 diagonal sisi, hal ini didapat karena pada kubus dan balok mempunyai 6 bidang/sisi masing-masing bidang tersebut memiliki 2 sudut yang berhapan maka didapatkanlah 2 diagonal sisi, maka 2 x 6 (banyaknyasisi) = 12.</string>
    <string name="diagonal_ruang_balok">Diagonal ruang sebuah balok adalah ruas garis yang menghubungkan dua titik sudut berhadapan dalam balok. Terdapat 4 diagonal ruang, yaitu: AG, BH, CE, DF.
</string>
    <string name="bidang_diagonal_balok">Bidang diagonal pada sebuah balok adalah bidang yang melalui dua buah rusuk yang berhadapan. Bidang diagonal balok membagi balok menjadi dua bagian yang sama besar. Terdapat 6 buah bidang diagonal, yaitu : ACGE, BDHF, ABGH, CDEF, ADGF, BCHE
</string>
    <string name="sifatbalok">Balok memiliki sifat yang hampir sama dengan kubus. Amatilah balok ABCD.EFGH pada gambar di atas. Berikut ini akan diuraikan sifat-sifat balok.</string>
    <string name="sifat1balok">Coba kamu perhatikan sisi ABCD, EFGH, ABFE, dan seterusnya. Sisi-sisi tersebut memiliki bentuk persegipanjang. Dalam balok, minimal memiliki dua pasang sisi yang berbentuk persegipanjang.</string>
    <string name="sifat2balok">Perhatikan rusuk-rusuk balok pada gambar disamping Rusuk-rusuk yang sejajar seperti AB, CD, EF, dan GH memiliki ukuran yang sama panjang begitu pula dengan rusuk AE, BF, CG, dan DH memiliki ukuran yang sama panjang.</string>
    <string name="sifat3balok">Dari gambar terlihat bahwa panjang diagonal bidang pada sisi yang berhadapan, yaitu ABCD dengan EFGH, ABFE dengan DCGH, dan BCFG dengan ADHE memiliki ukuran yang sama panjang.</string>
    <string name="sifat4balok">Diagonal ruang pada balok ABCD.EFGH, yaitu AG, EC, DF, dan HB memiliki panjang yang sama.</string>
    <string name="sifat5balok">Coba kamu perhatikan balok ABCD.EFGH pada gambar. Bidang diagonal balok EDFC memiliki bentuk persegipanjang. Begitu pula dengan bidang diagonal lainnya.</string>
</resources>